# pmi-chapter-monitor

./: .gitignore  CLAUDE.md  README.md  analyze.py  config.yaml  frontpages.csv  netlify.toml  pmi_chapters.csv  pyproject.toml  scrape_chapters.py  scrape_frontpages.py
.github/workflows/: weekly.yml
site/: index.html  shared.js  style.css
site/data/: analysis.json  previous_analysis.json
site/js/: main.js
